cheng's ch7 comments

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -30,7 +30,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 
     The large scales of AGN also provide insight into the larger-scale structure of the Universe. Giant radio galaxies for example (\autoref{sec:what-we-see-agn}) are difficult to identify due to their size and disconnected appearance (\autoref{sec:aggregation}), but are so large that they can be used to probe galaxy clusters \citep{banfield_radio_2016} and even the large-scale structure of the Universe \citep{reiprich_abell_2020}. Other large-scale effects seem to exist, such as the apparent alignment of radio galaxies \citep{contigiani_radio_2017,panwar_alignment_2020}, though investigation continues as to whether this effect is real or due to some unknown systematic bias. New radio surveys will reveal more radio sources than ever before, and if they can be identified, radio structures in these surveys will allow us to investigate the structure of the Universe.
 
-    The magnetic structure of AGN and their extended lobes may be probed by radio polarimetry observations \citep{anderson_broadband_2015,grant11polarised}. Through polarisation, though, extragalactic AGN can provide insight into our own Galaxy: the Faraday depth and complexity (\autoref{sec:polarisation}) of extragalactic radio sources can be used to quantify local magnetic fields. With more polarised radio sources to be revealed through upcoming wide-area polarisation surveys, the magnetic field of the Milky Way and its surrounding intergalactic medium can be better resolved.
+    The magnetic structure of AGN and their extended lobes may be probed by radio polarimetry observations \citep{anderson_broadband_2015,grant11polarised}. Through polarisation, though, extragalactic AGN can provide insight into our own Galaxy: the Faraday depth and complexity (\autoref{sec:polarisation}) of extragalactic radio sources can be used to quantify local magnetic fields. With more polarised radio sources to be revealed through upcoming wide-area polarisation surveys, the magnetic field of the Milky Way and its surrounding intergalactic medium can be better resolved. Polarimetry also allows us to determine some aspects of the structure of unresolved extragalactic sources, even though we cannot spatially see that structure: spatially extended, polarised radio sources may have different polarisation spectra to those which are spatially compact when projected onto the sky.
 
     Other problems in radio astronomy relate to the new level of data that we are about to obtain from large telescopes like the SKA, which we discuss in \autoref{sec:big-data}.
 
@@ -60,7 +60,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 
     Source identification is critical for analysis of radio sources in large-scale surveys whether one is interested in individual sources or their bulk properties. Without solving issues like cross-identification and Faraday complexity we will not be able to make full use of the SKA when it arrives. As we will discuss in \autoref{sec:xid}, cross-identification of radio sources with their counterparts in infrared or optical is key to understanding these sources. Many galaxy properties can only be derived from observations of the galaxy, the stellar component of which can be traced by emission in the infrared and optical. This can yield properties including distance, star formation rate, and even mass of the central black hole powering the radio source itself. We develop an automated machine learning method for cross-identification in \autoref{cha:cross-id} and apply it to obtain physical results in \autoref{cha:rlfs}.
 
-    Bulk analysis of polarised sources greatly benefits from being able to assess their Faraday complexity. The most important application is perhaps in the development of so-called \defn{rotation measure grids}, which help characterise the magnetic field of the Milky Way and surrounding intergalactic medium. Without knowing which sources are complex and which are not, we cannot estimate the grid reliably. \autoref{cha:faraday} details our development of an automated Faraday complexity classifier.
+    Bulk analysis of polarised sources greatly benefits from being able to assess their Faraday complexity. The most important application is perhaps in the development of so-called \defn{rotation measure grids}, which help characterise the magnetic field of the Milky Way and surrounding intergalactic medium. Without knowing which sources are complex and which are not, we cannot estimate the grid reliably. A fast way to estimate Faraday complexity also allows us to quickly determine which sources may need following up, either with more expensive algorithms or further observations. \autoref{cha:faraday} details our development of an automated Faraday complexity classifier.
 
 \section{Thesis outline}
 \label{sec:outline}
@@ -90,14 +90,14 @@ My main contributions to radio astroinformatics in this thesis are:
 During my PhD, I had the good fortune to collaborate with many talented authors and contribute to a number of related works. The following is a list of papers which I co-authored in this time:
 
 \begin{itemize}
-    \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in \emph{Monthly Notices of the Royal Astronomy Society}.
-    \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson. Not yet submitted.
-    \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. To be published in \emph{Publications of the Astronomical Society of Australia}.
-    \item \emph{Radio Galaxy Zoo Data Release 1: visual identification of 75,641 radio morphologies from the FIRST and ATLAS surveys}, by O. I. Wong, A. F. Garon, \textbf{M. J. Alger}, K. W. Willett, L. Rudnick, J. K. Banfield, J. Swan, S. S. Shabala, H. Andernach, R. P. Norris, B. D. Simmons, A. D. Kapi\'nska, N. Seymour, et al. Not yet submitted.
-    \item \emph{Radio Galaxy Zoo: CLARAN - a deep learning classifier for radio morphologies}, by C. Wu, O. I. Wong, L. Rudnick, S. S. Shabala, \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, S. V. White, A. F. Garon, R. P. Norris, H. Andernach, J. Tate, V. Lukic, H. Tang, K. Schawinski, F. I. Diakogiannis. Published in 2019 in \emph{Monthly Notices of the Royal Astronomy Society}.
-    \item \emph{Heightened Faraday Complexity in the inner 1 kpc of the Galactic Centre}, by J. D. Livingston, N. M. McClure-Griffiths, B. M. Gaensler, A. Seta, \textbf{M. J. Alger}. Published in 2021 in \emph{Monthly Notices of the Royal Astronomy Society}.
-    \item \emph{Radio Galaxy Zoo: Unsupervised Clustering of Convolutionally Auto-encoded Radio-astronomical Images}, by N. O. Ralph, R. P. Norris, G. Fang, L. A. F. Park, T. J. Galvin, \textbf{M. J. Alger}, H. Andernach, C. Lintott, L. Rudnick, S. S. Shabala, and O. I. Wong. Published in 2019 in \emph{Publications of the Astronomical Society of the Pacific}.
-    \item \emph{Radio Galaxy Zoo: Knowledge Transfer Using Rotationally Invariant Self-organizing Maps}, by T. J. Galvin, M. Huynh, R. P. Norris, X. R. Wang, E. Hopkins, O. I. Wong, S. S. Shabala, L. Rudnick, \textbf{M. J. Alger}, and K. L. Polsterer. Published in 2019 in \emph{Publications of the Astronomical Society of the Pacific}.
+    \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification} (2018). \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. \emph{Monthly Notices of the Royal Astronomy Society} 478, pp. 5547--5563.
+    \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources} (in prep.). \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson.
+    \item \emph{Interpretable Faraday Complexity Classification} (in press). \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. \emph{Publications of the Astronomical Society of Australia}.
+    \item \emph{Radio Galaxy Zoo Data Release 1: visual identification of 75,641 radio morphologies from the FIRST and ATLAS surveys} (in prep.). O. I. Wong, A. F. Garon, \textbf{M. J. Alger}, K. W. Willett, L. Rudnick, J. K. Banfield, J. Swan, S. S. Shabala, H. Andernach, R. P. Norris, B. D. Simmons, A. D. Kapi\'nska, N. Seymour, et al.
+    \item \emph{Radio Galaxy Zoo: CLARAN - a deep learning classifier for radio morphologies} (2019). C. Wu, O. I. Wong, L. Rudnick, S. S. Shabala, \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, S. V. White, A. F. Garon, R. P. Norris, H. Andernach, J. Tate, V. Lukic, H. Tang, K. Schawinski, and F. I. Diakogiannis. \emph{Monthly Notices of the Royal Astronomy Society} 482, pp. 1211--1230.
+    \item \emph{Heightened Faraday Complexity in the inner 1 kpc of the Galactic Centre} (2021), by J. D. Livingston, N. M. McClure-Griffiths, B. M. Gaensler, A. Seta, and \textbf{M. J. Alger}. \emph{Monthly Notices of the Royal Astronomy Society} 502, pp. 3814--3828.
+    \item \emph{Radio Galaxy Zoo: Unsupervised Clustering of Convolutionally Auto-encoded Radio-astronomical Images} (2019). N. O. Ralph, R. P. Norris, G. Fang, L. A. F. Park, T. J. Galvin, \textbf{M. J. Alger}, H. Andernach, C. Lintott, L. Rudnick, S. S. Shabala, and O. I. Wong. \emph{Publications of the Astronomical Society of the Pacific} 131, 108011.
+    \item \emph{Radio Galaxy Zoo: Knowledge Transfer Using Rotationally Invariant Self-organizing Maps} (2019). T. J. Galvin, M. Huynh, R. P. Norris, X. R. Wang, E. Hopkins, O. I. Wong, S. S. Shabala, L. Rudnick, \textbf{M. J. Alger}, and K. L. Polsterer. \emph{Publications of the Astronomical Society of the Pacific} 131, 108009.
 \end{itemize}
 
 \newpage
