--- a/thesis/listofconstants.tex
+++ b/thesis/listofconstants.tex
@@ -1,6 +1,8 @@
 %!tex root=./thesis.tex
 
 \chapter*{List of Constants}
+\addcontentsline{toc}{chapter}{List of Constants}
+\markboth{List of Constants}{}
 
 The values of the following constants, except where otherwise noted, are drawn from the NIST Reference on Constants, Units, and Uncertainty \citep{mohr_nist_2019} which itself draws from the 2018 CODATA recommended values.
 
@@ -17,6 +19,8 @@ $\sigma_T$ & m$^2$ & Thomson cross section & $6.6524587321(60) \times 10^{-29}$\
 \end{longtable}
 
 \chapter*{List of Abbreviations}
+\addcontentsline{toc}{chapter}{List of Abbreviations}
+\markboth{List of Abbreviations}{}
 
 The following list summarises abbreviations that are commonly used in this thesis.
 
