--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -359,6 +359,17 @@
   pages     = {29--39},
 }
 
+@article{bingham2018pyro,
+author = {Bingham, Eli and Chen, Jonathan P. and Jankowiak, Martin and Obermeyer, Fritz and
+          Pradhan, Neeraj and Karaletsos, Theofanis and Singh, Rohit and Szerlip, Paul and
+          Horsfall, Paul and Goodman, Noah D.},
+title = {{Pyro: Deep Universal Probabilistic Programming}},
+journal = {Journal of Machine Learning Research},
+volume = 20,
+eid = 28,
+year = {2019}
+}
+
 @Article{     birzan08power,
   author    = {{B{\^i}rzan}, L. and {McNamara}, B.~R. and {Nulsen},
           P.~E.~J. and {Carilli}, C.~L. and {Wise}, M.~W.},
